[239] Resize Sort-by dropdown to ensure no clipping of text.

--- a/ckanext/dgu/theme/public/css/dgu.css
+++ b/ckanext/dgu/theme/public/css/dgu.css
@@ -712,7 +712,7 @@ h2.front-page-no-body {
   font-weight: bold;
 }
 .sort-by-controls {
-  padding: 10px 20px 16px 395px;
+  padding: 10px 20px 16px 380px;
   color: #fff;
 }
 .sort-by-controls label {
@@ -732,7 +732,7 @@ h2.front-page-no-body {
   margin-right: 20px;
 }
 .sort-by-controls select {
-  width: 100px;
+  width: 115px;
 }
 .sort-by-controls .feed-icon {
   float: right;
